[package]
name = "opaque-types"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Generate target-layout-compatible opaque Rust types at build time"
license = "MIT OR Apache-2.0"
authors = ["Michael Ilyin <milyin@gmail.com>"]
repository = "https://github.com/milyin/opaque-types"
documentation = "https://docs.rs/opaque-types"
readme = "README.md"
keywords = ["ffi", "opaque", "layout", "build-script"]
categories = ["development-tools::build-utils", "external-ffi-bindings"]
include = [
    "/src/**",
    "/Cargo.lock",
    "/README.md",
    "/RELEASING.md",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
]

[dependencies]
anyhow = "1.0"
get-cargo-lock = "0.1.0"
object = { version = "0.36", default-features = false, features = ["read", "std", "archive", "elf", "macho", "pe", "coff"] }
quote = "1.0"
syn = { version = "2.0", default-features = false, features = ["full", "parsing", "printing"] }
toml = "0.9"

[dev-dependencies]
tempfile = "3.20"
